--- a/css/styles.css
+++ b/css/styles.css
@@ -118,3 +118,25 @@ color: #8f8f8f;
   width: 10%;
   margin: 20px 20px 50px;
 }
+
+.pricing-text{
+  text-align: center;
+  padding-bottom: 100px;
+}
+
+.pricing{
+  padding: 100px;
+}
+
+.pricing-col{
+  padding: 3% 2%;
+}
+
+.cta{
+  background-color: #ff4c68;
+  text-align: center;
+  padding: 20px;
+}
+.footer{
+  background-color: #ff4c68;
+}
